Fix - layout cut off issue fix test2

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -170,14 +170,14 @@
 
 
 .pg2-plot-lgeo {
-  /* width: 90%;
-  display: inline-block; */
+  /* width: 90%; */
+  display: block;
   padding-top: 1%;
 }
 
 .pg3-plot-lgeo {
-  /* width: 90%;
-  display: inline-block; */
+  /* width: 90%; */
+  display: block;
   padding-top: 1%;
 }
 
